# nextjs-amazon-clone

./: README.md
.github/workflows/: backend-workflow.yml
client/: .env  .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
client/src/app/: globals.css  layout.tsx  providers.tsx
client/src/app/admin/dashboard/: page.tsx
client/src/app/admin/login/: page.tsx
client/src/app/admin/logout/: page.tsx
client/src/app/admin/orders/: page.tsx
client/src/app/cart/: page.tsx
client/src/app/layouts/: admin-layout.tsx  layouts.tsx
client/src/app/login/: page.tsx
client/src/app/my-orders/: page.tsx
client/src/app/signup/: page.tsx
client/src/components/common/: button-with-loader.tsx  loading-overlay.tsx
client/src/components/ui/: button.tsx  nextui-shim.tsx
client/src/lib/api/: api-client.ts  auth.ts  category.ts  comments.ts  products.ts  sellers.ts
client/src/lib/ui/: async.ts
client/src/store/: store.ts
client/src/store/slices/: index.ts  ui-slice.ts
server-fastapi/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server-fastapi/amazon_clone_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server-fastapi/app/: core.py  main.py
server-fastapi/app/db/: database.py  models.py
server-fastapi/app/routers/: addresses.py  auth.py  categories.py  comments.py  health.py  inventory.py  orders.py  products.py  sellers.py
server-fastapi/app/schemas/: __init__.py  auth.py  categories.py  comments.py  common.py  orders.py  products.py
server-fastapi/app/utils/: auth.py
(+17 files in other folders)
